--- a/src/components/vislist/vislist.html
+++ b/src/components/vislist/vislist.html
@@ -7,6 +7,7 @@
       chart="cluster[0][0]"
       is-selected="Fields.isSelected"
       highlighted="Fields.highlighted"
+      is-in-list="isInList"
       show-expand="true"
       expand-action="select(fieldSet, cluster, $index)"
     >
