--- a/src/components/vislistitem/vislistitem.html
+++ b/src/components/vislistitem/vislistitem.html
@@ -25,6 +25,7 @@
     <vl-plot vg-spec="chart.vgSpec"
       encoding="chart.encoding"
       max-height="330"
+      disabled="isInList && chart && !isInList(chart)"
     ></vl-plot>
   </div>
   <div class="no-shrink">
