--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -49,3 +49,31 @@ $fa-font-path: "../../bower_components/fontawesome/fonts";
 .field-set-info, .schema{
   margin-bottom: 10px;
 }
+
+.spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: #808080;
+  opacity: .9;
+}
+
+.ajax_loader {
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  margin-left: -50px; /* -1 * image width / 2 */
+  margin-top: -50px;  /* -1 * image height / 2 */
+  display: block;
+  width: 100px;
+  height: 100px;
+  padding: 15px;
+  background-color: #000;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+}
+
