--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,34 +1,11 @@
+<div class="spinner" ng-show="loading">
+    <div class="ajax_loader">
+        <img src="assets/images/mini-loader.gif"/>
+    </div>
+</div>
 <div class="flex-root vflex full-width full-height">
   <div class="full-width no-shrink">
-    <div class="card no-right-margin no-top-margin margin-bottom">
-      <div class="right">
-        <div class="controls">
-          <span ng-show="consts.debug">
-            <a ng-href="{{ {fields: Fields.fields} | reportUrl }}" target="_blank" class="command debug" tooltips tooltip-size="small"
-              tooltip-content="Report an issue">
-              <i class="fa fa-bug"></i>
-            </a>
-            <!-- <a href="http://bit.ly/visrecissues" target="_blank" class="command debug">Known Issues</a> -->
-            <a class="command debug" ng-click="showDevPanel = !showDevPanel" tooltips
-              tooltip-size="small"
-              tooltip-content="Debug Tool">
-              <i class="fa fa-wrench"></i>
-            </a>
-          </span>
-          <a class="command" ng-click="showBookmark=true">
-            <i class="fa fa-bookmark"></i>
-            Bookmarks ({{Bookmarks.length}})
-          </a>
-          <a class="command" ng-click="chron.undo()" ng-class="{disabled: !canUndo}">
-            <i class="fa fa-undo"></i> Undo
-          </a>
-          <a class="command" ng-click="chron.redo()" ng-class="{disabled: !canRedo}">
-            <i class="fa fa-repeat"></i> Redo
-          </a>
-        </div>
-      </div>
-      <h1>Data Voyager</h1>
-    </div>
+
     <alert-messages></alert-messages>
   </div>
   <div class="hflex full-width main-panel grow-1">
@@ -37,7 +14,7 @@
         <div class="right">
           <dataset-selector></dataset-selector>
         </div>
-        <h2>Data</h2>
+        <h2>Columns</h2>
         <field-list></field-list>
       </div>
     </div>
@@ -45,17 +22,5 @@
       <vis-list></vis-list>
     </div>
   </div>
-  <div class="hflex full-width dev-panel" ng-show="showDevPanel">
-    <div class="pane">
-      <div class="card">
-        <button ng-click="Logger.clear()">Clear logs</button><br/>
-        <button ng-click="Logger.export()">Download logs</button>
-      </div>
-      <label><input type="checkbox" ng-model="consts.debugInList"/> Show Debug In List</label>
-    </div>
-  </div>
+
 </div>
-<bookmark-list active="showBookmark"
-  deactivate="hideBookmark();"
-  highlighted="Fields.highlighted">
-</bookmark-list>
